Wrapped items in grid and fixed display flex

--- a/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
@@ -1,5 +1,5 @@
 div.peoples-item-container,
-div.explore-grid {
+div.grid-items {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -56,6 +56,7 @@ div.explore-grid {
 
       h2 {
         margin-top: 1.5em;
+        text-align: center;
       }
 
       a {
@@ -89,6 +90,11 @@ div.explore-grid {
       }
     }
   }
+}
+
+div.explore-grid div.grid-items .item:nth-child(even) {
+  margin-top: 50px;
+  height: 300px;
 }
 
 @media (min-width: 768px) and (max-width: 1286px) {
